--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -204,7 +204,7 @@
       </ng-container>
       
       <ng-container  *ngIf="call_to_action!=''">
-        <h4 class="calltoaction mw568 px44">{{call_to_action}}</h4>
+        <h4 class="calltoaction mw568 indent">{{call_to_action}}</h4>
       </ng-container>
 
 
