--- a/src/app/page/page.component.css
+++ b/src/app/page/page.component.css
@@ -45,10 +45,51 @@ p {
 }
 
 
-/***** Tool Navigation *****/
-#tool-navigation .buttons {
-    width: calc(50% - 2px);
+/***** Buttons *****/
+.button {
     cursor: pointer;
+    font-size: 20px;
+    line-height: 48px;
+    border: var(--kg-blue) 1px solid;
+    color: var(--kg-white);
+    background-color: var(--kg-blue);
+    border-radius: 50px;
+    display: inline-block;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.button.button-white {
+    color: var(--kg-blue);
+    background-color: var(--kg-white);
+}
+.button:hover {
+    color: var(--kg-white) !important;
+    background-color: var(--kg-blue-light) !important;
+    border-color: var(--kg-blue-light) !important;
+}
+
+
+/***** Tool Navigation *****/
+#tool-navigation .button {
+    width: 120px;
+    font-size: 18px;
+}
+#tool-navigation .button:first-child:not(:last-child) {
+    border-right-width: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+#tool-navigation .button:last-child:not(:first-child) {
+    border-left-width: 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+#tool-navigation .button:first-child:last-child {
+    border-width: 1px;
+}
+.firstPage #tool-navigation .button,
+.lastPage #tool-navigation .button {
+    width: 240px;
 }
 
 
@@ -120,21 +161,9 @@ p.firstContent {
     margin-top: 12px;
 }
 
-.buttonContent a {
-    background-color: #3ba4db; 
-    text-align: center;
-    border-radius: 50px;
-    padding: 11px 25px; 
+.buttonContent .button {
     min-width: 200px;
     max-width: 100%;
-    color:white;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    line-height: 1.4;
-    overflow-x: hidden;
-    vertical-align: top;
-    cursor: pointer;
 }
 
 .linkContent { 
@@ -222,25 +251,6 @@ footer span {
     margin-top: -7%;
 }
 
-.buttons{
-    text-align: center; 
-    padding-top: 15px;
-    width: 264px;
-    height:64px;
-}
-
-.buttons:hover{    
-    text-decoration: none;
-}
-
-.pill-left{
-    margin-right: 2px;
-}
-
-.pill-right{
-    margin-left: 2px;
-}
-
 a.kg-bg-gray:hover{
     background-color: #e4e0e0;
     color:#bebebe;
@@ -305,7 +315,8 @@ a.kg-bg-blue:hover{
         margin-top: 0;
     }
 
-    #toolContent > .textContent + .buttonContent + .textContent {
+    #toolContent > .textContent + .buttonContent + .textContent,
+    #toolContent > .textContent + .buttonContent.buttonDone  {
         margin-top: 32px;
     }
 
