Terms of Use and Privacy Policy links mainly (#66)
* Terms of Use and Privacy Policy links mainly

* Centering text

--- a/src/app/page/page.component.css
+++ b/src/app/page/page.component.css
@@ -311,7 +311,8 @@ a.kg-bg-blue:hover{
     #toolContent .stepHeading + .imageContent,
     #toolContent .cardContent .cardHeading,
     #toolContent .cardContent .arrayContent span:first-child,
-    #toolContent .cardContent .buttonContent a {
+    #toolContent .cardContent .buttonContent a,
+    #toolContent .cardContent .textContent * {
         margin-top: 0;
     }
 
