--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -172,6 +172,7 @@
                 <a (click)="formAction(link[1])">{{link[0]}}</a>
               </div>
             </form>
+            <p class="mw568 textContent indent disclaimer tc" dir={{pageGetparameters.dir}}><small>Content provided by Cru. <a href="https://godtoolsapp.com/terms-of-use/" target="_blank">Terms of Use</a>.&nbsp;<a href="https://www.cru.org/us/en/about/privacy.html" target="_blank">Privacy Policy</a>.</small></p>
           </ng-container>
 
         </div>
