--- a/src/app/shared/sharing-modal/sharing-modal.component.html
+++ b/src/app/shared/sharing-modal/sharing-modal.component.html
@@ -1,94 +1,27 @@
-
-  <span class="r absolute">
-    <a class="db share">
-      <img src="assets/img/share.png" *ngIf="ShareState == 'min'" (click)="ShareState = 'max'">
-      <!-- <i class="fas fa-share-alt" *ngIf="ShareState == 'min'" (click)="ShareState = 'max'" href="#"></i> -->
-      <!-- <i class="fas fa-share-alt" data-toggle="modal" data-target="#share" href="#"></i> -->
-    </a>
-    <div>
-      <div class="sharemax" *ngIf="ShareState == 'max'">
-        <a title="Close" class="btn shareclose"  (click)="ShareState = 'min'">
-          <div class="fas fa-times"></div>
+<div class="r absolute">
+  <a class="db share">
+    <img src="assets/img/share.png" *ngIf="ShareState == 'min'" (click)="ShareState = 'max'">
+  </a>
+  <div>
+    <div class="sharemax" *ngIf="ShareState == 'max'">
+      <a title="Close" class="btn shareclose"  (click)="ShareState = 'min'">
+        <div class="fas fa-times"></div>
+      </a>
+      <a title="Twitter" class="btn"  (click)="shareTo('TWITTER')">
+        <div class="fab fa-twitter"></div>
+      </a>
+      <a title="Facebook" class="btn"  (click)="shareTo('FACEBOOK')">
+        <div class="fab fa-facebook-f"></div>
+      </a>
+      <a title="Google+" class="btn"  (click)="shareTo('GOOGLEPLUS')">
+        <div class="fab fa-google-plus-g"></div>
+      </a>
+      <a class="btn"  (click)="shareTo('MAILTO')" title="Email">
+        <div class="fas fa-envelope"></div>
+      </a>
+      <a class="btn" id="lnkCopy"  (click)="CopyToClipboard(event)" title="Copy URL to Clipboard">
+          <div class="fas fa-link"></div>
         </a>
-        <a title="Twitter" class="btn"  (click)="shareTo('TWITTER')">
-          <div class="fab fa-twitter"></div>
-        </a>
-        <a title="Facebook" class="btn"  (click)="shareTo('FACEBOOK')">
-          <div class="fab fa-facebook-f"></div>
-        </a>
-        <a title="Google+" class="btn"  (click)="shareTo('GOOGLEPLUS')">
-          <div class="fab fa-google-plus-g"></div>
-        </a>
-        <a class="btn"  (click)="shareTo('MAILTO')" title="Email">
-          <div class="fas fa-envelope"></div>
-        </a>
-        <a class="btn" id="lnkCopy"  (click)="CopyToClipboard(event)" title="Copy URL to Clipboard">
-            <div class="fas fa-link"></div>
-          </a>
-        <!-- <button class="btn"    ngclipboard data-clipboard-text="Just because you can doesn't mean you should — clipboard.js" 
-        ngclipboard-success="CopySuccess(e);" ngclipboard-error="CopyError(e);"  title="Email">
-            <div class="fa fa-envelope"></div>
-        </button> -->
-      </div>
-    </div>
-
-    <!-- <a  href="javascript:void(0)" target="_blank" class="m10 db pill kg-bg-gray-dark share kg-gray-light" (click)="shareTo('FACEBOOK')">
-    <i class="fab fa-facebook-f v-mid"></i>
-  </a> -->
-  </span>
- 
-
-<!-- 
-<div aria-hidden="false" style="display:none" class="modal fade in" id="share" role="dialog" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <div class="modal-title" align="left">
-          <div class="fa fa-share-alt"></div>
-          <button type="button" class="close btn-trans" data-dismiss="modal">
-            <div class="fa fa-close"></div>
-          </button>
-        </div>
-      </div>
-      <div class="modal-body">
-        <form class="form-horizontal">
-          <div class="form-group" align="left">
-            <label class="col-sm-2 control-label"></label>
-            <div class="col-sm-10 col-sm-offset-2">
-              <div class="btn-group">
-
-                <a title="Twitter" class="btn btn-default" href="javascript:void(0)" target="_blank" (click)="shareTo('TWITTER')">
-                  <div class="fa fa-twitter fa-lg"></div>
-                </a>
-                <a title="Facebook" class="btn btn-default" href="javascript:void(0)" target="_blank" (click)="shareTo('FACEBOOK')">
-                  <div class="fa fa-facebook fa-lg"></div>
-                </a>
-                <a title="Google+" class="btn btn-default" href="javascript:void(0)" target="_blank" (click)="shareTo('GOOGLEPLUS')">
-                  <div class="fa fa-google-plus fa-lg"></div>
-                </a>
-                <a class="btn btn-default" href="javascript:void(0)" target="_blank" (click)="shareTo('MAILTO')" title="Email">
-                  <div class="fa fa-envelope fa-lg"></div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label" for="share-link">
-              <div class="fa fa-link fa-lg"></div>
-            </label>
-            <div class="col-sm-10">
-              <input name="share-link" id="share-link" [value]="currentUrl" class="form-control">
-
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label" for="share-iframe">Embed</label>
-            <div class="col-sm-10">
-              <input name="share-iframe" id="share-ifrm" [value]="embedUrl" class="form-control">
-            </div>
-          </div>
-        </form>
-      </div>
     </div>
   </div>
-</div> -->
+</div>
