--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import './assets/style.css';
+@import './assets/css/toastr.css';
+@import './assets/fontawesome/css/all.css';
