--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -117,14 +117,19 @@
               </ng-template>
             </ng-container>
 
-            <form *ngIf="cardItem.cardforms" class="formContent mw568 indent">
+            <form *ngIf="cardItem.cardforms" class="formContent mw568 indent" #emailSignupForm="ngForm">
               <div class="form-group" *ngFor="let element of cardItem.cardforms.elements">
                 <label [for]="element.name">{{element.label}}</label>
                 <input [type]="element.type" class="form-control" [value]="element.value" [name]="element.name" [placeholder]="element.placeholder"
-                  [required]="element.required">
+                  [required]="element.required" [(ngModel)]="element.value">
               </div>
               <div class="form-group tc buttonContent" *ngFor="let button of cardItem.cardforms.buttons">
-                <a (click)="formAction(button[1])" class="button">{{button[0]}}</a>
+                <ng-container *ngIf="button[1].includes('followup:send'); else nonSubmitButton">
+                  <a (click)="onSubmitSubscriberInfo(emailSignupForm.form); formAction(button[1]);" class="button">{{button[0]}}</a>
+                </ng-container>
+                <ng-template #nonSubmitButton>
+                    <a (click)="formAction(button[1])" class="button">{{button[0]}}</a>
+                </ng-template>
               </div>
               <div class="form-group tc cardLink" *ngFor="let link of cardItem.cardforms.links">
                 <a (click)="formAction(link[1])">{{link[0]}}</a>
