--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -223,7 +223,7 @@
       <ng-container *ngIf="!displayForm">
         <footer id="toolFooter">
           <span><a href="http://godtoolsapp.com" target="_blank">Learn more at godtoolsapp.com</a></span>
-          <span>© 1994-2018 <a href="http://cru.org" target="_blank">Cru</a>. All Rights Reserved.</span>
+          <span>© 1994-{{currentYear}} <a href="http://cru.org" target="_blank">Cru</a>. All Rights Reserved.</span>
         </footer>
       </ng-container>
           
