--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,6 @@
 
 <footer id="homeFooter" class="homeHeaderFooter">
   <div class="bs-container">
-    ©1994-2018 Cru. All Rights Reserved. <a href="https://godtoolsapp.com/terms-of-use/" target="_blank">Terms of Use</a>. <a href="https://www.cru.org/us/en/about/privacy.html" target="_blank">Privacy Policy</a>.
+    ©1994-{{currentYear}} Cru. All Rights Reserved. <a href="https://godtoolsapp.com/terms-of-use/" target="_blank">Terms of Use</a>. <a href="https://www.cru.org/us/en/about/privacy.html" target="_blank">Privacy Policy</a>.
   </div>
 </footer>
