--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -1,10 +1,12 @@
 <div class="outerbox">
-
   <!-- Tools Consistent Header -->
   <header id="toolHeader">
     <div class="header tc relative">
-      <span class="l absolute kg-gray-dark ng-binding language-selector-toggle" (click)="Languages()">
-        <img src="assets/img/lang.png" class="langicon"> {{selectLan}}
+      <span
+        class="l absolute kg-gray-dark ng-binding language-selector-toggle"
+        (click)="Languages()"
+      >
+        <img src="assets/img/lang.png" class="langicon" /> {{ selectLan }}
         <i class="fas fa-chevron-up flip"></i>
       </span>
       <sharing-modal [book]="selectbook"></sharing-modal>
@@ -12,38 +14,70 @@
     <div id="languageList" class="py25 ng-hide" *ngIf="language">
       <div class="mw568">
         <ul>
-          <li class="ng-binding" dir='ltr' (click)="selectLanguage(lang,true)" *ngFor="let lang of selectedBookLanguauageTranslations">{{lang.attributes.name}}</li>
+          <li
+            class="ng-binding"
+            dir="ltr"
+            (click)="selectLanguage(lang, true)"
+            *ngFor="let lang of selectedBookLanguauageTranslations"
+          >
+            {{ lang.attributes.name }}
+          </li>
         </ul>
       </div>
     </div>
   </header>
 
   <!-- Main Content -->
-  <div id="toolContent" [hidden]="showLoader" [ngClass]="{'tc' : FirstPage || LastPage, 'firstPage' : FirstPage, 'lastPage' : LastPage}">
-
+  <div
+    id="toolContent"
+    [hidden]="showLoader"
+    [ngClass]="{
+      tc: FirstPage || LastPage,
+      firstPage: FirstPage,
+      lastPage: LastPage
+    }"
+  >
     <!-- Error message -->
     <ng-container *ngIf="showNoRecordFound || errorpresent">
       <div class="bs-jumbotron tc">
-        <h2 *ngIf="showNoRecordFound">This book isn't available in the currently selected language.</h2>
-        <h2 *ngIf="errorpresent">{{errorMsg}}</h2>
+        <h2 *ngIf="showNoRecordFound">
+          This book isn't available in the currently selected language.
+        </h2>
+        <h2 *ngIf="errorpresent">{{ errorMsg }}</h2>
       </div>
     </ng-container>
 
     <!-- If no error -->
-    <ng-container *ngIf="!showNoRecordFound  && !errorpresent">
-
+    <ng-container *ngIf="!showNoRecordFound && !errorpresent">
       <!-- First Page Header -->
       <ng-container *ngIf="FirstPage && currentPageContent">
-        <h2 class="mw568 tc firstHeading ng-binding" dir={{pageGetparameters.dir}}>{{currentPageContent?.heading}}</h2>
+        <h2
+          class="mw568 tc firstHeading ng-binding"
+          dir="{{ pageGetparameters.dir }}"
+        >
+          {{ currentPageContent?.heading }}
+        </h2>
       </ng-container>
 
       <!-- Additional Pages Header -->
-      <ng-container *ngIf="!FirstPage && !displayModel && currentPageContent?.heading">
-        <div class="stepHeading" [ngClass]="{'tenSteps' : counter>9, 'noCounter' : headerCounter == null }">
+      <ng-container
+        *ngIf="!FirstPage && !displayModel && currentPageContent?.heading"
+      >
+        <div
+          class="stepHeading"
+          [ngClass]="{
+            tenSteps: counter > 9,
+            noCounter: headerCounter == null
+          }"
+        >
           <ng-container *ngIf="currentPageContent">
-            <h1 class="ng-binding mw568" dir={{pageGetparameters.dir}}>
-              <span class="ng-binding" *ngIf="counter>0 && !displayForm && headerCounter">{{headerCounter}}</span>
-              {{currentPageContent?.heading}}
+            <h1 class="ng-binding mw568" dir="{{ pageGetparameters.dir }}">
+              <span
+                class="ng-binding"
+                *ngIf="counter > 0 && !displayForm && headerCounter"
+                >{{ headerCounter }}</span
+              >
+              {{ currentPageContent?.heading }}
             </h1>
           </ng-container>
         </div>
@@ -54,9 +88,20 @@
         <div class="ng-scope">
           <p class="mx44">
             <span class="db ng-scope">
-              <span class="ng-binding ng-scope" dir={{pageGetparameters.dir}}> {{summary_line}} </span>
+              <span
+                class="ng-binding ng-scope"
+                dir="{{ pageGetparameters.dir }}"
+              >
+                {{ summary_line }}
+              </span>
               <p *ngFor="let item of multiple_summary_line">
-                <span dir={{pageGetparameters.dir}} class="ng-binding ng-scope" style="margin-bottom: 5px;"> {{item}} </span>
+                <span
+                  dir="{{ pageGetparameters.dir }}"
+                  class="ng-binding ng-scope"
+                  style="margin-bottom: 5px;"
+                >
+                  {{ item }}
+                </span>
               </p>
             </span>
           </p>
@@ -65,92 +110,187 @@
 
       <!-- Basic content -->
       <ng-container *ngIf="paras?.length > 0">
-        <ng-container *ngFor="let item of paras; let i= index">
-
+        <ng-container *ngFor="let item of paras; let i = index">
           <!-- Array content -->
-          <ng-container *ngIf="item.type == 'text' && isArray(item.text)==true">
+          <ng-container
+            *ngIf="item.type == 'text' && isArray(item.text) == true"
+          >
             <p class="mw568 arrayContent">
-              <span class="ng-binding" dir={{pageGetparameters.dir}} *ngFor="let line of item.text">{{line}}</span>
+              <span
+                class="ng-binding"
+                dir="{{ pageGetparameters.dir }}"
+                *ngFor="let line of item.text"
+                >{{ line }}</span
+              >
             </p>
           </ng-container>
 
           <!-- Text content -->
-          <ng-container *ngIf="item.type == 'text' && isArray(item.text)==false">
-            <p class="mw568 textContent ng-binding" [ngClass]="{'firstContent' : FirstPage}" dir={{pageGetparameters.dir}}>{{item.text}}</p>
+          <ng-container
+            *ngIf="item.type == 'text' && isArray(item.text) == false"
+          >
+            <p
+              class="mw568 textContent ng-binding"
+              [ngClass]="{ firstContent: FirstPage }"
+              dir="{{ pageGetparameters.dir }}"
+            >
+              {{ item.text }}
+            </p>
           </ng-container>
 
           <!-- Image content -->
           <ng-container *ngIf="item.type == 'image' && item.image">
-            <img class="imageContent ng-binding" [ngClass]="{'firstImage' : FirstPage}" [src]="item.image">
+            <img
+              class="imageContent ng-binding"
+              [ngClass]="{ firstImage: FirstPage }"
+              [src]="item.image"
+            />
           </ng-container>
 
           <!-- Button content -->
           <ng-container *ngIf="item.type == 'button'">
-            <div class="mw568 buttonContent tc" dir={{pageGetparameters.dir}}>
-              <a [href]="'http://' + item.text" class="button" target="_blank">{{hostnameUrlFromLink(item.text)}}</a>
+            <div
+              class="mw568 buttonContent tc"
+              dir="{{ pageGetparameters.dir }}"
+            >
+              <a
+                [href]="'http://' + item.text"
+                class="button"
+                target="_blank"
+                >{{ hostnameUrlFromLink(item.text) }}</a
+              >
             </div>
           </ng-container>
-
         </ng-container>
       </ng-container>
 
       <!-- Cards -->
       <ng-container *ngIf="Cards">
-        <div class="cardContent" *ngFor="let card of Cards" [hidden]="card.hidden">
-
+        <div
+          class="cardContent"
+          *ngFor="let card of Cards"
+          [hidden]="card.hidden"
+        >
           <!-- Card Heading -->
           <ng-container *ngIf="!card.isForm">
-            <h4 class="mw568 cardHeading ng-binding" dir={{pageGetparameters.dir}}>{{card.label}}</h4>
+            <h4
+              class="mw568 cardHeading ng-binding"
+              dir="{{ pageGetparameters.dir }}"
+            >
+              {{ card.label }}
+            </h4>
           </ng-container>
 
           <!-- Card text/button/image content -->
-          <ng-container *ngFor="let cardItem of card.contentList;let i= index">
-
+          <ng-container
+            *ngFor="let cardItem of card.contentList; let i = index"
+          >
             <ng-container *ngIf="cardItem.paragraph">
-              <ng-container *ngIf="!isString(cardItem.paragraph); else singleParagraph">
+              <ng-container
+                *ngIf="!isString(cardItem.paragraph); else singleParagraph"
+              >
                 <ng-container *ngFor="let paragraph of cardItem.paragraph">
-                    <p class="mw568 textContent indent">{{paragraph}}</p>
+                  <p class="mw568 textContent indent">{{ paragraph }}</p>
                 </ng-container>
               </ng-container>
               <ng-template #singleParagraph>
-                <p class="mw568 textContent indent">{{cardItem.paragraph}}</p>
+                <p class="mw568 textContent indent">{{ cardItem.paragraph }}</p>
               </ng-template>
             </ng-container>
 
-            <form *ngIf="cardItem.cardforms" class="formContent mw568 indent" #emailSignupForm="ngForm">
-              <div class="form-group" *ngFor="let element of cardItem.cardforms.elements">
-                <label [for]="element.name">{{element.label}}</label>
-                <input [type]="element.type" class="form-control" [value]="element.value" [name]="element.name" [placeholder]="element.placeholder"
-                  [required]="element.required" [(ngModel)]="element.value">
+            <form
+              *ngIf="cardItem.cardforms"
+              class="formContent mw568 indent"
+              #emailSignupForm="ngForm"
+            >
+              <div
+                class="form-group"
+                *ngFor="let element of cardItem.cardforms.elements"
+              >
+                <label [for]="element.name">{{ element.label }}</label>
+                <input
+                  [type]="element.type"
+                  class="form-control"
+                  [value]="element.value"
+                  [name]="element.name"
+                  [placeholder]="element.placeholder"
+                  [required]="element.required"
+                  [(ngModel)]="element.value"
+                />
               </div>
-              <div class="form-group tc buttonContent" *ngFor="let button of cardItem.cardforms.buttons">
-                <ng-container *ngIf="button[1].includes('followup:send'); else nonSubmitButton">
-                  <a (click)="onSubmitSubscriberInfo(emailSignupForm.form); formAction(button[1]);" class="button">{{button[0]}}</a>
+              <div
+                class="form-group tc buttonContent"
+                *ngFor="let button of cardItem.cardforms.buttons"
+              >
+                <ng-container
+                  *ngIf="
+                    button[1].includes('followup:send');
+                    else nonSubmitButton
+                  "
+                >
+                  <a
+                    (click)="
+                      onSubmitSubscriberInfo(emailSignupForm.form);
+                      formAction(button[1])
+                    "
+                    class="button"
+                    >{{ button[0] }}</a
+                  >
                 </ng-container>
                 <ng-template #nonSubmitButton>
-                    <a (click)="formAction(button[1])" class="button">{{button[0]}}</a>
+                  <a (click)="formAction(button[1])" class="button">{{
+                    button[0]
+                  }}</a>
                 </ng-template>
               </div>
-              <div class="form-group tc cardLink" *ngFor="let link of cardItem.cardforms.links">
-                <a (click)="formAction(link[1])">{{link[0]}}</a>
+              <div
+                class="form-group tc cardLink"
+                *ngFor="let link of cardItem.cardforms.links"
+              >
+                <a (click)="formAction(link[1])">{{ link[0] }}</a>
               </div>
-              <p class="mw568 textContent indent disclaimer tc" dir={{pageGetparameters.dir}}><small>Content provided by Cru. <a href="https://godtoolsapp.com/terms-of-use/" target="_blank">Terms of Use</a>.&nbsp;<a href="https://www.cru.org/us/en/about/privacy.html" target="_blank">Privacy Policy</a>.</small></p>
+              <p
+                class="mw568 textContent indent disclaimer tc"
+                dir="{{ pageGetparameters.dir }}"
+              >
+                <small
+                  >Content provided by Cru.
+                  <a
+                    href="https://godtoolsapp.com/terms-of-use/"
+                    target="_blank"
+                    >Terms of Use</a
+                  >.&nbsp;<a
+                    href="https://www.cru.org/us/en/about/privacy.html"
+                    target="_blank"
+                    >Privacy Policy</a
+                  >.</small
+                >
+              </p>
             </form>
 
             <ng-container *ngIf="cardItem.button">
               <div class="mw568 buttonContent tc indent">
                 <ng-container *ngIf="cardItem.button[1]; else singleItemButton">
-                  <a (click)="formAction(cardItem.button[1])" class="button">{{cardItem.button[0]}}</a>
+                  <a (click)="formAction(cardItem.button[1])" class="button">{{
+                    cardItem.button[0]
+                  }}</a>
                 </ng-container>
                 <ng-template #singleItemButton>
-                  <a [href]="cardItem.button[0]" class="button" target="_blank">{{cardItem.button[0]}}</a>
+                  <a
+                    [href]="cardItem.button[0]"
+                    class="button"
+                    target="_blank"
+                    >{{ cardItem.button[0] }}</a
+                  >
                 </ng-template>
               </div>
             </ng-container>
 
             <ng-container *ngIf="cardItem.link">
               <div class="mw568 linkContent indent">
-                <a (click)="formAction(cardItem.link[1])">{{cardItem.link[0]}}</a>
+                <a (click)="formAction(cardItem.link[1])">{{
+                  cardItem.link[0]
+                }}</a>
               </div>
             </ng-container>
 
@@ -165,43 +305,66 @@
             </ng-container>
 
             <ng-container *ngIf="cardItem.tab && cardItem.tab.tabList">
-              <div *ngFor="let tabItem of cardItem.tab.tabList" class="tabContent">
-                <p *ngIf="tabItem.paragraph" class="textContent mw568 indent ng-scope" dir={{pageGetparameters.dir}}>{{tabItem.paragraph}}</p>
-                <img *ngIf="tabItem.image" class="imageContent" [src]="tabItem.image">
-                <p *ngIf="tabItem.text" class="textContent mw568 indent ng-scope" dir={{pageGetparameters.dir}}>{{tabItem.text}}</p>
+              <div
+                *ngFor="let tabItem of cardItem.tab.tabList"
+                class="tabContent"
+              >
+                <p
+                  *ngIf="tabItem.paragraph"
+                  class="textContent mw568 indent ng-scope"
+                  dir="{{ pageGetparameters.dir }}"
+                >
+                  {{ tabItem.paragraph }}
+                </p>
+                <img
+                  *ngIf="tabItem.image"
+                  class="imageContent"
+                  [src]="tabItem.image"
+                />
+                <p
+                  *ngIf="tabItem.text"
+                  class="textContent mw568 indent ng-scope"
+                  dir="{{ pageGetparameters.dir }}"
+                >
+                  {{ tabItem.text }}
+                </p>
               </div>
             </ng-container>
-
           </ng-container>
-          </div>
+        </div>
       </ng-container>
 
       <ng-container *ngIf="displayModel">
         <ng-container *ngFor="let modal of Modals">
           <div class="stepHeading noCounter">
             <ng-container *ngIf="currentPageContent">
-              <h1 class="mw568 ng-binding">{{modal.title}}</h1>
+              <h1 class="mw568 ng-binding">{{ modal.title }}</h1>
             </ng-container>
           </div>
           <ng-container *ngIf="modal.paras?.length > 0">
-            <ng-container *ngFor="let item of modal.paras; let i= index">
-              <ng-container *ngIf="item.type== 'text'">
-                <p class="mw568 textContent indent ng-binding ng-scope" dir={{pageGetparameters.dir}}>
-                  {{item.text}}
+            <ng-container *ngFor="let item of modal.paras; let i = index">
+              <ng-container *ngIf="item.type == 'text'">
+                <p
+                  class="mw568 textContent indent ng-binding ng-scope"
+                  dir="{{ pageGetparameters.dir }}"
+                >
+                  {{ item.text }}
                 </p>
               </ng-container>
-              <ng-container *ngIf="item.type=='button'">
+              <ng-container *ngIf="item.type == 'button'">
                 <div class="mw568 buttonContent tc buttonDone">
-                  <a (click)="formAction(item.button[1])" class="button">{{item.button[0]}}</a>
+                  <a (click)="formAction(item.button[1])" class="button">{{
+                    item.button[0]
+                  }}</a>
                 </div>
               </ng-container>
             </ng-container>
           </ng-container>
         </ng-container>
       </ng-container>
-      
+
       <ng-container *ngIf="call_to_action">
-        <h4 class="calltoaction mw568 indent">{{call_to_action}}</h4>
+        <h4 class="calltoaction mw568 indent">{{ call_to_action }}</h4>
       </ng-container>
 
       <!-- Tool navigation -->
@@ -209,12 +372,21 @@
         <div id="tool-navigation" class="mw568 tc">
           <!-- If not first page -->
           <ng-container *ngIf="!FirstPage">
-            <a (click)="previous()"  dir={{pageGetparameters.dir}} class="button button-white far fa-arrow-left"></a>
+            <a
+              (click)="previous()"
+              dir="{{ pageGetparameters.dir }}"
+              class="button button-white far fa-arrow-left"
+            ></a>
           </ng-container>
 
           <!-- If not last page -->
           <ng-container *ngIf="!LastPage">
-            <a (click)="next()" dir={{pageGetparameters.dir}} dir="pageGetparameters.dir" class="button far fa-arrow-right"></a>
+            <a
+              (click)="next()"
+              dir="{{ pageGetparameters.dir }}"
+              dir="pageGetparameters.dir"
+              class="button far fa-arrow-right"
+            ></a>
           </ng-container>
         </div>
       </ng-container>
@@ -222,12 +394,20 @@
       <!-- Footer -->
       <ng-container *ngIf="!displayForm">
         <footer id="toolFooter">
-          <span><a href="http://godtoolsapp.com" target="_blank">Learn more at godtoolsapp.com</a></span>
-          <span>© 1994-{{currentYear}} <a href="http://cru.org" target="_blank">Cru</a>. All Rights Reserved.</span>
+          <span
+            ><a href="http://godtoolsapp.com" target="_blank"
+              >Learn more at godtoolsapp.com</a
+            ></span
+          >
+          <span
+            >© 1994-{{ currentYear }}
+            <a href="http://cru.org" target="_blank">Cru</a>. All Rights
+            Reserved.</span
+          >
         </footer>
       </ng-container>
-          
     </ng-container>
-
-  </div><!-- end Main Content -->
-</div><!-- end .outerbox -->
+  </div>
+  <!-- end Main Content -->
+</div>
+<!-- end .outerbox -->
